--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://yoursite.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: joe liberi
+subtitle: rambly ramblings
+author: Joe Liberi
 simple_search: https://www.google.com/search
 description:
 
